// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/menu/demo/basic.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="top-nav-bar ej-navbar ej-navbar-light"
    >
      <div
        class="ej-navbar-left"
        role="button"
      >
        <span
          aria-hidden="true"
          class="ej-navbar-left-icon"
        >
          <img
            alt=""
            class="ej-icon ej-icon-md"
            src="https://gw.alipayobjects.com/zos/rmsportal/iXVHARNNlmdCGnwWxQPH.svg"
          />
        </span>
        Menu
      </div>
      <div
        class="ej-navbar-title"
      >
        Here is title
      </div>
      <div
        class="ej-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/multiSelect.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="multi-top-nav-bar ej-navbar ej-navbar-light"
    >
      <div
        class="ej-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="ej-navbar-title"
      >
        Multi select menu
      </div>
      <div
        class="ej-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/singleMulti.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="single-multi-top-nav-bar ej-navbar ej-navbar-light"
    >
      <div
        class="ej-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="ej-navbar-title"
      >
        Single Multi menu
      </div>
      <div
        class="ej-navbar-right"
      />
    </div>
  </div>
</div>
`;

exports[`renders ./components/menu/demo/singleSelect.md correctly 1`] = `
<div
  class=""
>
  <div>
    <div
      class="single-top-nav-bar ej-navbar ej-navbar-light"
    >
      <div
        class="ej-navbar-left"
        role="button"
      >
        Menu
      </div>
      <div
        class="ej-navbar-title"
      >
        OneLevel menu
      </div>
      <div
        class="ej-navbar-right"
      />
    </div>
  </div>
</div>
`;
